--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+body {
+  font-family: 'Nunito', sans-serif;
+}
 .main-content{
   padding:10px;
-  width:90%;
   margin:20px auto;
-  background-color: antiquewhite;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -20,7 +22,7 @@
   }
   .skill-card {
     width:100%;
-    padding: 0px;
+    padding: 10px;
     height:auto;
   margin:5px;
   border-radius: 5px;
